# django-graphql

./: .gitignore  README.md  pyproject.toml
mysite/mysite/: __init__.py  settings.py  urls.py
mysite/polls/: __init__.py  containers.py  entities.py  managers.py  models.py  repositories.py  services.py  tests.py  urls.py  views.py
mysite/polls/fixtures/: data.json
mysite/polls/migrations/: 0001_initial.py  0002_studyplan_user_delete_choice_delete_question_and_more.py  0003_userstudyplanrelationship.py
mysite/polls/schema/: schema.py
