[tool.poetry]
name = "django-graphql"
version = "0.1.0"
description = "Demo for graphql based on Django"
authors = ["Jian Zhu <moon.ghost.jian@gmail.com>"]
readme = "README.md"
packages = [{include = "django_graphql"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
