[tool.poetry]
name = "django-graphql"
version = "0.1.0"
description = "Demo for graphql based on Django"
authors = ["Jian Zhu <moon.ghost.jian@gmail.com>"]
readme = "README.md"
packages = [{include = "django_graphql"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.4"
graphene-django = "^3.0.0"
yapf = "^0.32.0"
dependency-injector = "^4.40.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
